# rnu

./: CMakeLists.txt  CMakeSettings.json  cpp.hint
examples/: CMakeLists.txt  ex0.cpp  vec.hpp
include/rnu/: camera.hpp  lines.hpp  math.hpp  math.inl.hpp  obj.hpp  overload.hpp  si.hpp  thread_pool.hpp  vector_image.hpp
include/rnu/algorithm/: bvh.hpp  cull.hpp  dynamic_octree.hpp  dynamic_octree.inl.hpp  hash.hpp  skyline_packer.hpp  smooth.hpp
include/rnu/ecs/: component.hpp  ecs.hpp  ecs.inl  entity.hpp  flags.hpp  flags.inl  listener.hpp  system.hpp
include/rnu/font/: character_ranges.hpp  font.hpp  font_features.hpp  font_languages.hpp  font_scripts.hpp  font_table.hpp  sdf_font.hpp
include/rnu/math/: cx_fun.hpp  mat.hpp  mat_apply.inl.hpp  mat_math.inl.hpp  mat_op.inl.hpp  mat_type.hpp  mat_type.inl.hpp  math.hpp  math_func.hpp  math_func.inl.hpp  operators.hpp  packing.hpp  quat.hpp  quat_type.hpp  quat_type.inl.hpp  rect.hpp  traits.hpp  transform.hpp  transform.hpp.inl  vec.hpp  vec_apply.hpp  vec_math.inl.hpp  vec_op.hpp  vec_type.hpp  vec_type.inl.hpp
include/rnu/math/legacy__dontuse/: gum.hpp  mat.hpp  quat.hpp
include/rnu/math/legacy__dontuse/mat/: mat_apply.inl  mat_cond.inl  mat_det.inl  mat_get.inl  mat_make.inl  mat_modify.inl  mat_mul.inl  mat_ops.inl
include/rnu/math/legacy__dontuse/vec/: vec.hpp  vec_get.inl  vec_ops.inl  vec_std.inl
src/: bvh.cpp  component.cpp  ecs.cpp  font.cpp  obj.cpp  rnu.natvis  sdf_font.cpp  skyline_packer.cpp  system.cpp  thread_pool.cpp  vector_image.cpp
tests/: CMakeLists.txt  test_vectors.cpp
